Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/rawOverride/Fail1.out
Fail1.java:21:1: compiler.err.does.not.override.abstract: C, f(MyList), A
1 error
